Update tutorial notebooks with cleaned-up PDF output message at bottom.

--- a/NRPyPN/PN-Hamiltonian-Spin-Orbit.ipynb
+++ b/NRPyPN/PN-Hamiltonian-Spin-Orbit.ipynb
@@ -917,7 +917,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Created PN-Hamiltonian-Spin-Orbit.tex, and compiled LaTeX file to PDF file PN-Hamiltonian-Spin-Orbit.pdf\n"
+      "Created PN-Hamiltonian-Spin-Orbit.tex, and compiled LaTeX file to PDF file\n",
+      "    PN-Hamiltonian-Spin-Orbit.pdf\n"
      ]
     }
    ],
