--- a/NRPyPN/PN-Hamiltonian-Spin-Spin.ipynb
+++ b/NRPyPN/PN-Hamiltonian-Spin-Spin.ipynb
@@ -410,7 +410,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Created PN-Hamiltonian-Spin-Spin.tex, and compiled LaTeX file to PDF file PN-Hamiltonian-Spin-Spin.pdf\n"
+      "Created PN-Hamiltonian-Spin-Spin.tex, and compiled LaTeX file to PDF file\n",
+      "    PN-Hamiltonian-Spin-Spin.pdf\n"
      ]
     }
    ],
