--- a/NRPyPN/PN-dE_GW_dt_and_dM_dt.ipynb
+++ b/NRPyPN/PN-dE_GW_dt_and_dM_dt.ipynb
@@ -418,7 +418,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Created PN-dE_GW_dt_and_dM_dt.tex, and compiled LaTeX file to PDF file PN-dE_GW_dt_and_dM_dt.pdf\n"
+      "Created PN-dE_GW_dt_and_dM_dt.tex, and compiled LaTeX file to PDF file PN-\n",
+      "    dE_GW_dt_and_dM_dt.pdf\n"
      ]
     }
    ],
