--- a/Tutorial-ADM_Initial_Data-Brill-Lindquist.ipynb
+++ b/Tutorial-ADM_Initial_Data-Brill-Lindquist.ipynb
@@ -243,7 +243,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Created Tutorial-ADM_Initial_Data-Brill-Lindquist.tex, and compiled LaTeX file to PDF file Tutorial-ADM_Initial_Data-Brill-Lindquist.pdf\n"
+      "Created Tutorial-ADM_Initial_Data-Brill-Lindquist.tex, and compiled LaTeX\n",
+      "    file to PDF file Tutorial-ADM_Initial_Data-Brill-Lindquist.pdf\n"
      ]
     }
    ],
