--- a/Tutorial-ADM_Initial_Data-Converting_Exact_ADM_Spherical_or_Cartesian_to_BSSNCurvilinear.ipynb
+++ b/Tutorial-ADM_Initial_Data-Converting_Exact_ADM_Spherical_or_Cartesian_to_BSSNCurvilinear.ipynb
@@ -407,7 +407,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Created Tutorial-ADM_Initial_Data-Converting_Exact_ADM_Spherical_or_Cartesian_to_BSSNCurvilinear.tex, and compiled LaTeX file to PDF file Tutorial-ADM_Initial_Data-Converting_Exact_ADM_Spherical_or_Cartesian_to_BSSNCurvilinear.pdf\n"
+      "Created Tutorial-ADM_Initial_Data-\n",
+      "    Converting_Exact_ADM_Spherical_or_Cartesian_to_BSSNCurvilinear.tex, and\n",
+      "    compiled LaTeX file to PDF file Tutorial-ADM_Initial_Data-\n",
+      "    Converting_Exact_ADM_Spherical_or_Cartesian_to_BSSNCurvilinear.pdf\n"
      ]
     }
    ],
