--- a/Tutorial-BSSN-basis_transforms.ipynb
+++ b/Tutorial-BSSN-basis_transforms.ipynb
@@ -462,7 +462,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Created Tutorial-BSSN-basis_transforms.tex, and compiled LaTeX file to PDF file Tutorial-BSSN-basis_transforms.pdf\n"
+      "Created Tutorial-BSSN-basis_transforms.tex, and compiled LaTeX file to PDF\n",
+      "    file Tutorial-BSSN-basis_transforms.pdf\n"
      ]
     }
    ],
