--- a/Tutorial-BSSN_quantities.ipynb
+++ b/Tutorial-BSSN_quantities.ipynb
@@ -1319,7 +1319,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Created Tutorial-BSSN_quantities.tex, and compiled LaTeX file to PDF file Tutorial-BSSN_quantities.pdf\n"
+      "Created Tutorial-BSSN_quantities.tex, and compiled LaTeX file to PDF file\n",
+      "    Tutorial-BSSN_quantities.pdf\n"
      ]
     }
    ],
