--- a/Tutorial-ETK_thorn-IDMaxwellNRPy.ipynb
+++ b/Tutorial-ETK_thorn-IDMaxwellNRPy.ipynb
@@ -182,7 +182,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting MaxwellID/src/InitialData.c\n"
+      "Writing MaxwellID/src/InitialData.c\n"
      ]
     }
    ],
@@ -237,7 +237,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting MaxwellID/interface.ccl\n"
+      "Writing MaxwellID/interface.ccl\n"
      ]
     }
    ],
@@ -263,7 +263,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting MaxwellID/param.ccl\n"
+      "Writing MaxwellID/param.ccl\n"
      ]
     }
    ],
@@ -310,7 +310,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting MaxwellID/schedule.ccl\n"
+      "Writing MaxwellID/schedule.ccl\n"
      ]
     }
    ],
@@ -370,7 +370,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting MaxwellID/src/make.code.defn\n"
+      "Writing MaxwellID/src/make.code.defn\n"
      ]
     }
    ],
@@ -401,7 +401,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Created Tutorial-ETK_thorn-IDMaxwellNRPy.tex, and compiled LaTeX file to PDF file Tutorial-ETK_thorn-IDMaxwellNRPy.pdf\n"
+      "Created Tutorial-ETK_thorn-IDMaxwellNRPy.tex, and compiled LaTeX file to\n",
+      "    PDF file Tutorial-ETK_thorn-IDMaxwellNRPy.pdf\n"
      ]
     }
    ],
