--- a/Tutorial-ETK_thorn-MaxwellEvol.ipynb
+++ b/Tutorial-ETK_thorn-MaxwellEvol.ipynb
@@ -224,7 +224,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting MaxwellEvol/src/MaxwellEvol.c\n"
+      "Writing MaxwellEvol/src/MaxwellEvol.c\n"
      ]
     }
    ],
@@ -456,7 +456,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting MaxwellEvol/interface.ccl\n"
+      "Writing MaxwellEvol/interface.ccl\n"
      ]
     }
    ],
@@ -538,7 +538,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting MaxwellEvol/param.ccl\n"
+      "Writing MaxwellEvol/param.ccl\n"
      ]
     }
    ],
@@ -609,7 +609,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting MaxwellEvol/schedule.ccl\n"
+      "Writing MaxwellEvol/schedule.ccl\n"
      ]
     }
    ],
@@ -733,7 +733,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting MaxwellEvol/src/make.code.defn\n"
+      "Writing MaxwellEvol/src/make.code.defn\n"
      ]
     }
    ],
@@ -774,7 +774,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Created Tutorial-ETK_thorn-MaxwellEvol.tex, and compiled LaTeX file to PDF file Tutorial-ETK_thorn-MaxwellEvol.pdf\n"
+      "Created Tutorial-ETK_thorn-MaxwellEvol.tex, and compiled LaTeX file to PDF\n",
+      "    file Tutorial-ETK_thorn-MaxwellEvol.pdf\n"
      ]
     }
    ],
