--- a/Tutorial-Psi4_tetrads.ipynb
+++ b/Tutorial-Psi4_tetrads.ipynb
@@ -463,7 +463,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Created Tutorial-Psi4_tetrads.tex, and compiled LaTeX file to PDF file Tutorial-Psi4_tetrads.pdf\n"
+      "Created Tutorial-Psi4_tetrads.tex, and compiled LaTeX file to PDF file\n",
+      "    Tutorial-Psi4_tetrads.pdf\n"
      ]
     }
    ],
