--- a/Tutorial-SEOBNR_Documentation.ipynb
+++ b/Tutorial-SEOBNR_Documentation.ipynb
@@ -4432,7 +4432,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Created Tutorial-SEOBNR_Documentation.tex, and compiled LaTeX file to PDF file Tutorial-SEOBNR_Documentation.pdf\n"
+      "Created Tutorial-SEOBNR_Documentation.tex, and compiled LaTeX file to PDF\n",
+      "    file Tutorial-SEOBNR_Documentation.pdf\n"
      ]
     }
    ],
