--- a/Tutorial-SommerfeldBoundaryCondition.ipynb
+++ b/Tutorial-SommerfeldBoundaryCondition.ipynb
@@ -889,7 +889,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Created Tutorial-SommerfeldBoundaryCondition.tex, and compiled LaTeX file to PDF file Tutorial-SommerfeldBoundaryCondition.pdf\n"
+      "Created Tutorial-SommerfeldBoundaryCondition.tex, and compiled LaTeX file\n",
+      "    to PDF file Tutorial-SommerfeldBoundaryCondition.pdf\n"
      ]
     }
    ],
