--- a/Tutorial-Start_to_Finish-BSSNCurvilinear-Setting_up_Exact_Initial_Data.ipynb
+++ b/Tutorial-Start_to_Finish-BSSNCurvilinear-Setting_up_Exact_Initial_Data.ipynb
@@ -788,12 +788,12 @@
      "text": [
       "Compiling executable...\n",
       "(EXEC): Executing `gcc -Ofast -fopenmp -march=native -funroll-loops BlackHoleID_Ccodes/Initial_Data_Playground.c -o Initial_Data_Playground -lm`...\n",
-      "(BENCH): Finished executing in 1.8113071918487549 seconds.\n",
+      "(BENCH): Finished executing in 1.8127391338348389 seconds.\n",
       "Finished compilation.\n",
       "(EXEC): Executing `taskset -c 0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15 ./Initial_Data_Playground 96 96 96`...\n",
-      "(BENCH): Finished executing in 0.21004557609558105 seconds.\n",
+      "(BENCH): Finished executing in 0.20911073684692383 seconds.\n",
       "(EXEC): Executing `taskset -c 0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15 ./Initial_Data_Playground 48 48 48`...\n",
-      "(BENCH): Finished executing in 0.20870685577392578 seconds.\n"
+      "(BENCH): Finished executing in 0.20937561988830566 seconds.\n"
      ]
     }
    ],
@@ -1094,7 +1094,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Created Tutorial-Start_to_Finish-BSSNCurvilinear-Setting_up_Exact_Initial_Data.tex, and compiled LaTeX file to PDF file Tutorial-Start_to_Finish-BSSNCurvilinear-Setting_up_Exact_Initial_Data.pdf\n"
+      "Created Tutorial-Start_to_Finish-BSSNCurvilinear-\n",
+      "    Setting_up_Exact_Initial_Data.tex, and compiled LaTeX file to PDF file\n",
+      "    Tutorial-Start_to_Finish-BSSNCurvilinear-\n",
+      "    Setting_up_Exact_Initial_Data.pdf\n"
      ]
     }
    ],
