--- a/Tutorial-Start_to_Finish-ScalarWave.ipynb
+++ b/Tutorial-Start_to_Finish-ScalarWave.ipynb
@@ -582,12 +582,12 @@
      "text": [
       "Compiling executable...\n",
       "(EXEC): Executing `gcc -Ofast -fopenmp -march=native -funroll-loops ScalarWave_Ccodes/ScalarWave_Playground.c -o ScalarWave_Ccodes/output/ScalarWave_Playground -lm`...\n",
-      "(BENCH): Finished executing in 0.6100177764892578 seconds.\n",
+      "(BENCH): Finished executing in 0.6105504035949707 seconds.\n",
       "Finished compilation.\n",
       "(EXEC): Executing `taskset -c 0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15 ./ScalarWave_Playground 48`...\n",
-      "(BENCH): Finished executing in 0.2085888385772705 seconds.\n",
+      "(BENCH): Finished executing in 0.20864415168762207 seconds.\n",
       "(EXEC): Executing `taskset -c 0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15 ./ScalarWave_Playground 64`...\n",
-      "(BENCH): Finished executing in 0.20843052864074707 seconds.\n"
+      "(BENCH): Finished executing in 0.20850706100463867 seconds.\n"
      ]
     }
    ],
@@ -708,7 +708,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Created Tutorial-Start_to_Finish-ScalarWave.tex, and compiled LaTeX file to PDF file Tutorial-Start_to_Finish-ScalarWave.pdf\n"
+      "Created Tutorial-Start_to_Finish-ScalarWave.tex, and compiled LaTeX file to\n",
+      "    PDF file Tutorial-Start_to_Finish-ScalarWave.pdf\n"
      ]
     }
    ],
