--- a/Tutorial-Start_to_Finish-ScalarWaveCurvilinear.ipynb
+++ b/Tutorial-Start_to_Finish-ScalarWaveCurvilinear.ipynb
@@ -671,12 +671,12 @@
      "text": [
       "Compiling executable...\n",
       "(EXEC): Executing `gcc -Ofast -fopenmp -march=native -funroll-loops ScalarWaveCurvilinear_Playground_Ccodes/ScalarWaveCurvilinear_Playground.c -o ScalarWaveCurvilinear_Playground_Ccodes/output/ScalarWaveCurvilinear_Playground -lm`...\n",
-      "(BENCH): Finished executing in 0.8111002445220947 seconds.\n",
+      "(BENCH): Finished executing in 0.8105621337890625 seconds.\n",
       "Finished compilation.\n",
       "(EXEC): Executing `taskset -c 0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15 ./ScalarWaveCurvilinear_Playground 16  8 16`...\n",
-      "(BENCH): Finished executing in 0.2087109088897705 seconds.\n",
+      "(BENCH): Finished executing in 0.20806145668029785 seconds.\n",
       "(EXEC): Executing `taskset -c 0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15 ./ScalarWaveCurvilinear_Playground 24 12 24`...\n",
-      "(BENCH): Finished executing in 0.6092736721038818 seconds.\n"
+      "(BENCH): Finished executing in 0.8095216751098633 seconds.\n"
      ]
     }
    ],
@@ -839,7 +839,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Created Tutorial-Start_to_Finish-ScalarWaveCurvilinear.tex, and compiled LaTeX file to PDF file Tutorial-Start_to_Finish-ScalarWaveCurvilinear.pdf\n"
+      "Created Tutorial-Start_to_Finish-ScalarWaveCurvilinear.tex, and compiled\n",
+      "    LaTeX file to PDF file Tutorial-Start_to_Finish-\n",
+      "    ScalarWaveCurvilinear.pdf\n"
      ]
     }
    ],
