--- a/NRPyPN/PN-Hamiltonian-SSS.ipynb
+++ b/NRPyPN/PN-Hamiltonian-SSS.ipynb
@@ -219,7 +219,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Created PN-Hamiltonian-SSS.tex, and compiled LaTeX file to PDF file PN-Hamiltonian-SSS.pdf\n"
+      "Created PN-Hamiltonian-SSS.tex, and compiled LaTeX file to PDF file PN-\n",
+      "    Hamiltonian-SSS.pdf\n"
      ]
     }
    ],
