--- a/Tutorial-ADM_Initial_Data-StaticTrumpet.ipynb
+++ b/Tutorial-ADM_Initial_Data-StaticTrumpet.ipynb
@@ -345,7 +345,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Created Tutorial-ADM_Initial_Data-StaticTrumpet.tex, and compiled LaTeX file to PDF file Tutorial-ADM_Initial_Data-StaticTrumpet.pdf\n"
+      "Created Tutorial-ADM_Initial_Data-StaticTrumpet.tex, and compiled LaTeX\n",
+      "    file to PDF file Tutorial-ADM_Initial_Data-StaticTrumpet.pdf\n"
      ]
     }
    ],
