--- a/Tutorial-ADM_in_terms_of_BSSN.ipynb
+++ b/Tutorial-ADM_in_terms_of_BSSN.ipynb
@@ -507,7 +507,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Created Tutorial-ADM_in_terms_of_BSSN.tex, and compiled LaTeX file to PDF file Tutorial-ADM_in_terms_of_BSSN.pdf\n"
+      "Created Tutorial-ADM_in_terms_of_BSSN.tex, and compiled LaTeX file to PDF\n",
+      "    file Tutorial-ADM_in_terms_of_BSSN.pdf\n"
      ]
     }
    ],
