--- a/Tutorial-BSSN_time_evolution-BSSN_gauge_RHSs.ipynb
+++ b/Tutorial-BSSN_time_evolution-BSSN_gauge_RHSs.ipynb
@@ -586,7 +586,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Created Tutorial-BSSN_time_evolution-BSSN_gauge_RHSs.tex, and compiled LaTeX file to PDF file Tutorial-BSSN_time_evolution-BSSN_gauge_RHSs.pdf\n"
+      "Created Tutorial-BSSN_time_evolution-BSSN_gauge_RHSs.tex, and compiled\n",
+      "    LaTeX file to PDF file Tutorial-BSSN_time_evolution-BSSN_gauge_RHSs.pdf\n"
      ]
     }
    ],
