--- a/Tutorial-ETK_thorn-Interpolation_to_Arbitrary_Grids_multi_order.ipynb
+++ b/Tutorial-ETK_thorn-Interpolation_to_Arbitrary_Grids_multi_order.ipynb
@@ -2420,7 +2420,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Created Tutorial-ETK_thorn-Interpolation_to_Arbitrary_Grids_multi_order.tex, and compiled LaTeX file to PDF file Tutorial-ETK_thorn-Interpolation_to_Arbitrary_Grids_multi_order.pdf\n"
+      "Created Tutorial-ETK_thorn-\n",
+      "    Interpolation_to_Arbitrary_Grids_multi_order.tex, and compiled LaTeX\n",
+      "    file to PDF file Tutorial-ETK_thorn-\n",
+      "    Interpolation_to_Arbitrary_Grids_multi_order.pdf\n"
      ]
     }
    ],
