--- a/Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids.ipynb
+++ b/Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids.ipynb
@@ -1575,7 +1575,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Created Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids.tex, and compiled LaTeX file to PDF file Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids.pdf\n"
+      "Created Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids.tex, and\n",
+      "    compiled LaTeX file to PDF file Tutorial-ETK_thorn-\n",
+      "    Interpolation_to_Spherical_Grids.pdf\n"
      ]
     }
    ],
