--- a/Tutorial-ETK_thorn-WaveToyNRPy.ipynb
+++ b/Tutorial-ETK_thorn-WaveToyNRPy.ipynb
@@ -176,7 +176,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting WaveToyNRPy/src/WaveToyNRPy.c\n"
+      "Writing WaveToyNRPy/src/WaveToyNRPy.c\n"
      ]
     }
    ],
@@ -306,7 +306,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting WaveToyNRPy/interface.ccl\n"
+      "Writing WaveToyNRPy/interface.ccl\n"
      ]
     }
    ],
@@ -364,7 +364,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting WaveToyNRPy/param.ccl\n"
+      "Writing WaveToyNRPy/param.ccl\n"
      ]
     }
    ],
@@ -429,7 +429,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting WaveToyNRPy/schedule.ccl\n"
+      "Writing WaveToyNRPy/schedule.ccl\n"
      ]
     }
    ],
@@ -504,7 +504,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting WaveToyNRPy/src/make.code.defn\n"
+      "Writing WaveToyNRPy/src/make.code.defn\n"
      ]
     }
    ],
@@ -663,7 +663,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Created Tutorial-ETK_thorn-WaveToyNRPy.tex, and compiled LaTeX file to PDF file Tutorial-ETK_thorn-WaveToyNRPy.pdf\n"
+      "Created Tutorial-ETK_thorn-WaveToyNRPy.tex, and compiled LaTeX file to PDF\n",
+      "    file Tutorial-ETK_thorn-WaveToyNRPy.pdf\n"
      ]
     }
    ],
