--- a/Tutorial-RK_Butcher_Table_Validation.ipynb
+++ b/Tutorial-RK_Butcher_Table_Validation.ipynb
@@ -510,7 +510,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Created Tutorial-RK_Butcher_Table_Validation.tex, and compiled LaTeX file to PDF file Tutorial-RK_Butcher_Table_Validation.pdf\n"
+      "Created Tutorial-RK_Butcher_Table_Validation.tex, and compiled LaTeX file\n",
+      "    to PDF file Tutorial-RK_Butcher_Table_Validation.pdf\n"
      ]
     }
    ],
