--- a/Tutorial-ScalarWaveCurvilinear.ipynb
+++ b/Tutorial-ScalarWaveCurvilinear.ipynb
@@ -507,7 +507,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Created Tutorial-ScalarWaveCurvilinear.tex, and compiled LaTeX file to PDF file Tutorial-ScalarWaveCurvilinear.pdf\n"
+      "Created Tutorial-ScalarWaveCurvilinear.tex, and compiled LaTeX file to PDF\n",
+      "    file Tutorial-ScalarWaveCurvilinear.pdf\n"
      ]
     }
    ],
