--- a/Tutorial-Start_to_Finish-BSSNCurvilinear-Neutron_Star-Hydro_without_Hydro.ipynb
+++ b/Tutorial-Start_to_Finish-BSSNCurvilinear-Neutron_Star-Hydro_without_Hydro.ipynb
@@ -637,7 +637,7 @@
      "output_type": "stream",
      "text": [
       "Generating symbolic expressions for BSSN RHSs...\n",
-      "(BENCH) Finished BSSN symbolic expressions in 6.629417896270752 seconds.\n"
+      "(BENCH) Finished BSSN symbolic expressions in 6.6049487590789795 seconds.\n"
      ]
     }
    ],
@@ -865,13 +865,13 @@
       "\n",
       "\n",
       "Output C function enforce_detgammabar_constraint() to file BSSN_Hydro_without_Hydro_Ccodes/enforce_detgammabar_constraint.h\n",
-      "(BENCH) Finished gamma constraint C codegen in 0.07547187805175781 seconds.\n",
+      "(BENCH) Finished gamma constraint C codegen in 0.07814455032348633 seconds.\n",
       "Output C function rhs_eval() to file BSSN_Hydro_without_Hydro_Ccodes/rhs_eval.h\n",
-      "(BENCH) Finished BSSN_RHS C codegen in 8.305756330490112 seconds.\n",
+      "(BENCH) Finished BSSN_RHS C codegen in 8.355411767959595 seconds.\n",
       "Output C function Ricci_eval() to file BSSN_Hydro_without_Hydro_Ccodes/Ricci_eval.h\n",
-      "(BENCH) Finished Ricci C codegen in 13.456477403640747 seconds.\n",
+      "(BENCH) Finished Ricci C codegen in 13.647919178009033 seconds.\n",
       "Output C function Hamiltonian_constraint() to file BSSN_Hydro_without_Hydro_Ccodes/Hamiltonian_constraint.h\n",
-      "(BENCH) Finished Hamiltonian C codegen in 26.345880270004272 seconds.\n"
+      "(BENCH) Finished Hamiltonian C codegen in 26.973508834838867 seconds.\n"
      ]
     }
    ],
@@ -1464,16 +1464,16 @@
       "\n",
       "Compiling executable...\n",
       "(EXEC): Executing `gcc -Ofast -fopenmp -march=native -funroll-loops BSSN_Hydro_without_Hydro_Ccodes/Hydro_without_Hydro_Playground.c -o Hydro_without_Hydro_Playground -lm`...\n",
-      "(BENCH): Finished executing in 3.819019317626953 seconds.\n",
+      "(BENCH): Finished executing in 4.0186684131622314 seconds.\n",
       "Finished compilation.\n",
-      "(BENCH) Finished in 3.8328285217285156 seconds.\n",
+      "(BENCH) Finished in 4.030927896499634 seconds.\n",
       "\n",
       "Now running, should take ~10 seconds...\n",
       "\n",
       "(EXEC): Executing `taskset -c 0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15 ./Hydro_without_Hydro_Playground 96 16 2 0.5`...\n",
-      "\u001b[2KIt: 300 t/M=1.77 dt/M=5.90e-03 | 98.4%; ETA 0 s | t/M/h 7416.53 | gp/s 4.29e+06\n",
-      "(BENCH): Finished executing in 1.0142765045166016 seconds.\n",
-      "(BENCH) Finished in 1.0262541770935059 seconds.\n",
+      "\u001b[2KIt: 300 t/M=1.77 dt/M=5.90e-03 | 98.4%; ETA 0 s | t/M/h 7315.50 | gp/s 4.24e+06\n",
+      "(BENCH): Finished executing in 1.0138978958129883 seconds.\n",
+      "(BENCH) Finished in 1.0262904167175293 seconds.\n",
       "\n"
      ]
     }
@@ -1783,9 +1783,9 @@
       "Now running, should take ~10 seconds...\n",
       "\n",
       "(EXEC): Executing `taskset -c 0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15 ./Hydro_without_Hydro_Playground 48 8 2 0.5`...\n",
-      "\u001b[2KIt: 70 t/M=1.65 dt/M=2.36e-02 | 92.1%; ETA 0 s | t/M/h 85726.73 | gp/s 3.10e+06\n",
-      "(BENCH): Finished executing in 0.21488618850708008 seconds.\n",
-      "(BENCH) Finished in 0.22977852821350098 seconds.\n"
+      "\u001b[2KIt: 70 t/M=1.65 dt/M=2.36e-02 | 92.1%; ETA 0 s | t/M/h 84763.75 | gp/s 3.07e+06\n",
+      "(BENCH): Finished executing in 0.21504878997802734 seconds.\n",
+      "(BENCH) Finished in 0.23000335693359375 seconds.\n"
      ]
     }
    ],
@@ -1894,7 +1894,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Created Tutorial-Start_to_Finish-BSSNCurvilinear-Neutron_Star-Hydro_without_Hydro.tex, and compiled LaTeX file to PDF file Tutorial-Start_to_Finish-BSSNCurvilinear-Neutron_Star-Hydro_without_Hydro.pdf\n"
+      "Created Tutorial-Start_to_Finish-BSSNCurvilinear-Neutron_Star-\n",
+      "    Hydro_without_Hydro.tex, and compiled LaTeX file to PDF file Tutorial-\n",
+      "    Start_to_Finish-BSSNCurvilinear-Neutron_Star-Hydro_without_Hydro.pdf\n"
      ]
     }
    ],
