--- a/Tutorial-Start_to_Finish-BSSNCurvilinear-Setting_up_TOV_initial_data.ipynb
+++ b/Tutorial-Start_to_Finish-BSSNCurvilinear-Setting_up_TOV_initial_data.ipynb
@@ -1125,10 +1125,10 @@
      "text": [
       "Compiling executable...\n",
       "(EXEC): Executing `gcc -Ofast -fopenmp -march=native -funroll-loops TOVID_Ccodes/TOV_Playground.c -o TOV_Playground -lm`...\n",
-      "(BENCH): Finished executing in 1.6147971153259277 seconds.\n",
+      "(BENCH): Finished executing in 1.6147770881652832 seconds.\n",
       "Finished compilation.\n",
       "(EXEC): Executing `taskset -c 0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15 ./TOV_Playground 96 96 2`...\n",
-      "(BENCH): Finished executing in 0.21161961555480957 seconds.\n"
+      "(BENCH): Finished executing in 0.2123415470123291 seconds.\n"
      ]
     }
    ],
@@ -1293,7 +1293,7 @@
      "output_type": "stream",
      "text": [
       "(EXEC): Executing `taskset -c 0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15 ./TOV_Playground 48 48 2`...\n",
-      "(BENCH): Finished executing in 0.21218109130859375 seconds.\n"
+      "(BENCH): Finished executing in 0.2131946086883545 seconds.\n"
      ]
     },
     {
@@ -1387,7 +1387,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Created Tutorial-Start_to_Finish-BSSNCurvilinear-Setting_up_TOV_initial_data.tex, and compiled LaTeX file to PDF file Tutorial-Start_to_Finish-BSSNCurvilinear-Setting_up_TOV_initial_data.pdf\n"
+      "Created Tutorial-Start_to_Finish-BSSNCurvilinear-\n",
+      "    Setting_up_TOV_initial_data.tex, and compiled LaTeX file to PDF file\n",
+      "    Tutorial-Start_to_Finish-BSSNCurvilinear-\n",
+      "    Setting_up_TOV_initial_data.pdf\n"
      ]
     }
    ],
