--- a/Tutorial-cmdline_helper.ipynb
+++ b/Tutorial-cmdline_helper.ipynb
@@ -71,7 +71,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing cmdline_helper-validation.py\n"
+      "Overwriting cmdline_helper-validation.py\n"
      ]
     }
    ],
@@ -462,7 +462,7 @@
     "        Execute_input_string(r\"jupyter nbconvert --to latex --template \"\n",
     "                             +os.path.join(location_of_template_file,\"latex_nrpy_style.tplx\")\n",
     "                             +r\" --log-level='WARN' \"+notebookname+\".ipynb\",verbose=False)\n",
-    "        for i in range(3):\n",
+    "        for _i in range(3):  # _i is an unused variable.\n",
     "            Execute_input_string(r\"pdflatex -interaction=batchmode \"+notebookname+\".tex\",verbose=False)\n",
     "        delete_existing_files(notebookname+\".out \"+notebookname+\".aux \"+notebookname+\".log\")\n",
     "        if verbose:\n",
