Remove trailing whitespace from Jupyter notebook code cells. Add script to do this automatically in UnitTesting/fix_cruft__remove_trailing_whitespace_in_notebook.sh

--- a/Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide-Psi4.ipynb
+++ b/Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide-Psi4.ipynb
@@ -338,7 +338,7 @@
      "output_type": "stream",
      "text": [
       "Generating symbolic expressions for BSSN RHSs...\n",
-      "(BENCH) Finished BSSN symbolic expressions in 4.168989658355713 seconds.\n"
+      "(BENCH) Finished BSSN symbolic expressions in 4.324552774429321 seconds.\n"
      ]
     }
    ],
@@ -433,7 +433,7 @@
     "        loopopts = \"InteriorPoints,EnableSIMD,Enable_rfm_precompute\")\n",
     "    end = time.time()\n",
     "    print(\"(BENCH) Finished BSSN_RHS C codegen in \" + str(end - start) + \" seconds.\")\n",
-    "    \n",
+    "\n",
     "def Ricci():\n",
     "    print(\"Generating C code for Ricci tensor in \"+par.parval_from_str(\"reference_metric::CoordSystem\")+\" coordinates.\")\n",
     "    start = time.time()\n",
@@ -552,7 +552,7 @@
      "output_type": "stream",
      "text": [
       "Generating symbolic expressions for psi4...\n",
-      "(BENCH) Finished psi4 symbolic expressions in 16.692615747451782 seconds.\n",
+      "(BENCH) Finished psi4 symbolic expressions in 17.189886808395386 seconds.\n",
       "Output C function psi4() to file BSSN_Two_BHs_Collide_Ccodes/psi4.h\n"
      ]
     }
@@ -627,7 +627,7 @@
     "        file.write(Psi4re_pt.replace(\"IDX4\",\"IDX4S\"))\n",
     "    end = time.time()\n",
     "    print(\"(BENCH) Finished generating psi4_re_pt\"+str(part)+\" in \"+str(end-start)+\" seconds.\")\n",
-    "    \n",
+    "\n",
     "def Psi4im(part):\n",
     "    print(\"Generating C code for psi4_im_pt\"+str(part)+\" in \"+par.parval_from_str(\"reference_metric::CoordSystem\")+\" coordinates.\")\n",
     "    start = time.time()\n",
@@ -738,7 +738,7 @@
     "        xxCart(params,xx,R_ext_idx,1,1,xCart);\n",
     "        R_ext = sqrt(xCart[0]*xCart[0] + xCart[1]*xCart[1] + xCart[2]*xCart[2]);\n",
     "    }\n",
-    "    \n",
+    "\n",
     "    // Step 2: Compute psi_4 at this extraction radius and store to a local 2D array.\n",
     "    const int sizeof_2Darray = sizeof(REAL)*(Nxx_plus_2NGHOSTS1-2*NGHOSTS)*(Nxx_plus_2NGHOSTS2-2*NGHOSTS);\n",
     "    REAL *restrict psi4r_at_R_ext = (REAL *restrict)malloc(sizeof_2Darray);\n",
@@ -910,8 +910,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generating C code for psi4_im_pt0 in SinhSpherical coordinates.Generating C code for psi4_re_pt0 in SinhSpherical coordinates.Generating C code for psi4_im_pt1 in SinhSpherical coordinates.Generating C code for psi4_re_pt1 in SinhSpherical coordinates.Generating C code for psi4_re_pt2 in SinhSpherical coordinates.Generating optimized C code for Brill-Lindquist initial data. May take a while, depending on CoordSystem.Generating C code for BSSN RHSs in SinhSpherical coordinates.Generating C code for psi4_im_pt2 in SinhSpherical coordinates.Generating optimized C code for gamma constraint. May take a while, depending on CoordSystem.Generating C code for Ricci tensor in SinhSpherical coordinates.\n",
-      "Generating optimized C code for Hamiltonian constraint. May take a while, depending on CoordSystem.\n",
+      "Generating C code for psi4_re_pt1 in SinhSpherical coordinates.Generating C code for psi4_re_pt2 in SinhSpherical coordinates.Generating C code for psi4_im_pt0 in SinhSpherical coordinates.Generating C code for psi4_re_pt0 in SinhSpherical coordinates.Generating C code for psi4_im_pt1 in SinhSpherical coordinates.Generating optimized C code for Brill-Lindquist initial data. May take a while, depending on CoordSystem.Generating C code for psi4_im_pt2 in SinhSpherical coordinates.Generating optimized C code for Hamiltonian constraint. May take a while, depending on CoordSystem.Generating C code for BSSN RHSs in SinhSpherical coordinates.Generating optimized C code for gamma constraint. May take a while, depending on CoordSystem.\n",
+      "Generating C code for Ricci tensor in SinhSpherical coordinates.\n",
       "\n",
       "\n",
       "\n",
@@ -922,20 +922,20 @@
       "\n",
       "\n",
       "Output C function enforce_detgammabar_constraint() to file BSSN_Two_BHs_Collide_Ccodes/enforce_detgammabar_constraint.h\n",
-      "(BENCH) Finished gamma constraint C codegen in 0.13482379913330078 seconds.\n",
-      "(BENCH) Finished generating psi4_im_pt1 in 11.233258962631226 seconds.\n",
-      "(BENCH) Finished generating psi4_im_pt2 in 14.521527290344238 seconds.\n",
-      "(BENCH) Finished BL initial data codegen in 15.01898980140686 seconds.\n",
+      "(BENCH) Finished gamma constraint C codegen in 0.0887453556060791 seconds.\n",
+      "(BENCH) Finished generating psi4_im_pt1 in 11.010896444320679 seconds.\n",
+      "(BENCH) Finished generating psi4_im_pt2 in 14.278195858001709 seconds.\n",
+      "(BENCH) Finished BL initial data codegen in 15.113870859146118 seconds.\n",
       "Output C function rhs_eval() to file BSSN_Two_BHs_Collide_Ccodes/rhs_eval.h\n",
-      "(BENCH) Finished BSSN_RHS C codegen in 18.486114978790283 seconds.\n",
-      "(BENCH) Finished generating psi4_re_pt2 in 18.87348198890686 seconds.\n",
-      "(BENCH) Finished generating psi4_re_pt1 in 20.411739826202393 seconds.\n",
+      "(BENCH) Finished BSSN_RHS C codegen in 18.170278787612915 seconds.\n",
+      "(BENCH) Finished generating psi4_re_pt2 in 18.768199682235718 seconds.\n",
+      "(BENCH) Finished generating psi4_re_pt1 in 20.155396461486816 seconds.\n",
       "Output C function Ricci_eval() to file BSSN_Two_BHs_Collide_Ccodes/Ricci_eval.h\n",
-      "(BENCH) Finished Ricci C codegen in 20.628475189208984 seconds.\n",
-      "(BENCH) Finished generating psi4_im_pt0 in 35.39606022834778 seconds.\n",
+      "(BENCH) Finished Ricci C codegen in 20.29227614402771 seconds.\n",
+      "(BENCH) Finished generating psi4_im_pt0 in 34.73408126831055 seconds.\n",
       "Output C function Hamiltonian_constraint() to file BSSN_Two_BHs_Collide_Ccodes/Hamiltonian_constraint.h\n",
-      "(BENCH) Finished Hamiltonian C codegen in 36.36571526527405 seconds.\n",
-      "(BENCH) Finished generating psi4_re_pt0 in 59.94357872009277 seconds.\n"
+      "(BENCH) Finished Hamiltonian C codegen in 35.995962619781494 seconds.\n",
+      "(BENCH) Finished generating psi4_re_pt0 in 59.57105803489685 seconds.\n"
      ]
     }
    ],
@@ -1181,7 +1181,7 @@
     "// Step P6: Include basic functions needed to impose curvilinear\n",
     "//          parity and boundary conditions.\n",
     "#include \"boundary_conditions/CurviBC_include_Cfunctions.h\"\n",
-    "    \n",
+    "\n",
     "// Step P7: Implement the algorithm for upwinding.\n",
     "//          *NOTE*: This upwinding is backwards from\n",
     "//          usual upwinding algorithms, because the\n",
@@ -1201,7 +1201,7 @@
     "#include \"initial_data.h\"\n",
     "\n",
     "// Step P11: Declare function for evaluating Hamiltonian constraint (diagnostic)\n",
-    "#include \"Hamiltonian_constraint.h\"    \n",
+    "#include \"Hamiltonian_constraint.h\"\n",
     "\n",
     "// Step P12: Declare rhs_eval function, which evaluates BSSN RHSs\n",
     "#include \"rhs_eval.h\"\n",
@@ -1231,7 +1231,7 @@
     "int main(int argc, const char *argv[]) {\n",
     "    paramstruct params;\n",
     "#include \"set_Cparameters_default.h\"\n",
-    "    \n",
+    "\n",
     "    // Step 0a: Read command-line input, error out if nonconformant\n",
     "    if((argc != 4 && argc != 5) || atoi(argv[1]) < NGHOSTS || atoi(argv[2]) < NGHOSTS || atoi(argv[3]) < 2 /* FIXME; allow for axisymmetric sims */) {\n",
     "        fprintf(stderr,\"Error: Expected three command-line arguments: ./BrillLindquist_Playground Nx0 Nx1 Nx2,\\n\");\n",
@@ -1277,7 +1277,7 @@
     "        // Step 0e.i: Free allocated space for xx[][] array\n",
     "        for(int i=0;i<3;i++) free(xx[i]);\n",
     "    }\n",
-    "    \n",
+    "\n",
     "    // Step 0f: Call set_Nxx_dxx_invdx_params__and__xx(), which sets\n",
     "    //          params Nxx,Nxx_plus_2NGHOSTS,dxx,invdx, and xx[] for the\n",
     "    //          chosen (non-Eigen) CoordSystem.\n",
@@ -1309,11 +1309,11 @@
     "        fprintf(stderr,\"       or allocate (malloc) by hand storage for *diagnostic_output_gfs. \\n\");\n",
     "        exit(1);\n",
     "    }\n",
-    "    \n",
+    "\n",
     "    // Step 0k: Allocate memory for gridfunctions\n",
     "    #include \"MoLtimestepping/RK_Allocate_Memory.h\"\n",
     "    REAL *restrict auxevol_gfs = (REAL *)malloc(sizeof(REAL) * NUM_AUXEVOL_GFS * Nxx_plus_2NGHOSTS_tot);\n",
-    "    \n",
+    "\n",
     "    // Step 0l: Set up precomputed reference metric arrays\n",
     "    // Step 0l.i: Allocate space for precomputed reference metric arrays.\n",
     "    #include \"rfm_files/rfm_struct__malloc.h\"\n",
@@ -1343,7 +1343,7 @@
     "    time_t start_timer,end_timer;\n",
     "    time(&start_timer); // Resolution of one second...\n",
     "#endif\n",
-    "    \n",
+    "\n",
     "    // Step 3: Integrate the initial data forward in time using the chosen RK-like Method of \n",
     "    //         Lines timestepping algorithm, and output periodic simulation diagnostics \n",
     "    for(int n=0;n<=N_final;n++) { // Main loop to progress forward in time.\n",
@@ -1418,7 +1418,7 @@
     "        } // End progress indicator if(n % 10 == 0)\n",
     "    } // End main loop to progress forward in time.\n",
     "    fprintf(stderr,\"\\n\"); // Clear the final line of output from progress indicator.\n",
-    "    \n",
+    "\n",
     "    // Step 4: Free all allocated memory\n",
     "#include \"rfm_files/rfm_struct__freemem.h\"\n",
     "#include \"boundary_conditions/bcstruct_freemem.h\"\n",
@@ -1445,17 +1445,17 @@
       "\n",
       "Compiling executable...\n",
       "(EXEC): Executing `gcc -Ofast -fopenmp -march=native -funroll-loops BSSN_Two_BHs_Collide_Ccodes/BrillLindquist_Playground.c -o BrillLindquist_Playground -lm`...\n",
-      "(BENCH): Finished executing in 8.823867559432983 seconds.\n",
+      "(BENCH): Finished executing in 9.029894828796387 seconds.\n",
       "Finished compilation.\n",
-      "(BENCH) Finished in 8.835289001464844 seconds.\n",
+      "(BENCH) Finished in 9.041034936904907 seconds.\n",
       "\n",
       "\n",
       "Now running. Should take ~30 minutes...\n",
       "\n",
       "(EXEC): Executing `taskset -c 0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15 ./BrillLindquist_Playground 270 8 2 1.0`...\n",
-      "\u001b[2KIt: 27200 t=199.93 dt=7.35e-03 | 100.0%; ETA 0 s | t/h 2983.05 | gp/s 1.95e+06\n",
-      "(BENCH): Finished executing in 241.58660745620728 seconds.\n",
-      "(BENCH) Finished in 241.6026439666748 seconds.\n",
+      "\u001b[2KIt: 27200 t=199.93 dt=7.35e-03 | 100.0%; ETA 0 s | t/h 3080.48 | gp/s 2.01e+06\n",
+      "(BENCH): Finished executing in 233.89610075950623 seconds.\n",
+      "(BENCH) Finished in 233.9128029346466 seconds.\n",
       "\n",
       "\n"
      ]
@@ -1574,7 +1574,7 @@
     "\n",
     "#Transposed for easier unpacking:\n",
     "t,psi4r,psi4i = np.loadtxt(\"outpsi4_l2_m+0-\"+str(Nr)+\"-r\"+extraction_radius+\".txt\").T\n",
-    "    \n",
+    "\n",
     "t_retarded    = []\n",
     "log10abspsi4r = []\n",
     "bh_pert_thry  = []\n",
