--- a/Tutorial-Start_to_Finish-BSSNCurvilinear-Neutron_Star-Hydro_without_Hydro.ipynb
+++ b/Tutorial-Start_to_Finish-BSSNCurvilinear-Neutron_Star-Hydro_without_Hydro.ipynb
@@ -637,7 +637,7 @@
      "output_type": "stream",
      "text": [
       "Generating symbolic expressions for BSSN RHSs...\n",
-      "(BENCH) Finished BSSN symbolic expressions in 6.6049487590789795 seconds.\n"
+      "(BENCH) Finished BSSN symbolic expressions in 6.324056625366211 seconds.\n"
      ]
     }
    ],
@@ -748,7 +748,7 @@
     "        loopopts = \"InteriorPoints,EnableSIMD,Enable_rfm_precompute\")\n",
     "    end = time.time()\n",
     "    print(\"(BENCH) Finished BSSN_RHS C codegen in \" + str(end - start) + \" seconds.\")\n",
-    "    \n",
+    "\n",
     "def Ricci():\n",
     "    print(\"Generating C code for Ricci tensor in \"+par.parval_from_str(\"reference_metric::CoordSystem\")+\" coordinates.\")\n",
     "    start = time.time()\n",
@@ -860,18 +860,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generating C code for BSSN RHSs in Spherical coordinates.Generating optimized C code for Hamiltonian constraint. May take a while, depending on CoordSystem.Generating C code for Ricci tensor in Spherical coordinates.Generating optimized C code for gamma constraint. May take a while, depending on CoordSystem.\n",
+      "Generating C code for BSSN RHSs in Spherical coordinates.Generating C code for Ricci tensor in Spherical coordinates.Generating optimized C code for Hamiltonian constraint. May take a while, depending on CoordSystem.Generating optimized C code for gamma constraint. May take a while, depending on CoordSystem.\n",
       "\n",
       "\n",
       "\n",
       "Output C function enforce_detgammabar_constraint() to file BSSN_Hydro_without_Hydro_Ccodes/enforce_detgammabar_constraint.h\n",
-      "(BENCH) Finished gamma constraint C codegen in 0.07814455032348633 seconds.\n",
+      "(BENCH) Finished gamma constraint C codegen in 0.07684040069580078 seconds.\n",
       "Output C function rhs_eval() to file BSSN_Hydro_without_Hydro_Ccodes/rhs_eval.h\n",
-      "(BENCH) Finished BSSN_RHS C codegen in 8.355411767959595 seconds.\n",
+      "(BENCH) Finished BSSN_RHS C codegen in 8.169794797897339 seconds.\n",
       "Output C function Ricci_eval() to file BSSN_Hydro_without_Hydro_Ccodes/Ricci_eval.h\n",
-      "(BENCH) Finished Ricci C codegen in 13.647919178009033 seconds.\n",
+      "(BENCH) Finished Ricci C codegen in 13.499095439910889 seconds.\n",
       "Output C function Hamiltonian_constraint() to file BSSN_Hydro_without_Hydro_Ccodes/Hamiltonian_constraint.h\n",
-      "(BENCH) Finished Hamiltonian C codegen in 26.973508834838867 seconds.\n"
+      "(BENCH) Finished Hamiltonian C codegen in 26.75579595565796 seconds.\n"
      ]
     }
    ],
@@ -1094,7 +1094,7 @@
     "// Step P6: Include basic functions needed to impose curvilinear\n",
     "//          parity and boundary conditions.\n",
     "#include \"boundary_conditions/CurviBC_include_Cfunctions.h\"\n",
-    "    \n",
+    "\n",
     "// Step P7: Implement the algorithm for upwinding.\n",
     "//          *NOTE*: This upwinding is backwards from\n",
     "//          usual upwinding algorithms, because the\n",
@@ -1176,15 +1176,15 @@
     "        fprintf(stderr,\"Error: could not find rbar=Rbar from data file.\\n\");\n",
     "        exit(1);\n",
     "    }\n",
-    "    \n",
+    "\n",
     "    ID_inputs TOV_in;\n",
     "    TOV_in.Rbar = Rbar;\n",
     "    TOV_in.Rbar_idx = Rbar_idx;\n",
-    "    \n",
+    "\n",
     "    const int interp_stencil_size = 12;\n",
     "    TOV_in.interp_stencil_size = interp_stencil_size;\n",
     "    TOV_in.numlines_in_file = numlines_in_file;\n",
-    "    \n",
+    "\n",
     "    TOV_in.r_Schw_arr     = r_Schw_arr;\n",
     "    TOV_in.rho_arr        = rho_arr;\n",
     "    TOV_in.rho_baryon_arr = rho_baryon_arr;\n",
@@ -1194,7 +1194,7 @@
     "    TOV_in.exp4phi_arr    = exp4phi_arr;\n",
     "    TOV_in.rbar_arr       = rbar_arr;\n",
     "    /* END TOV INPUT ROUTINE */\n",
-    "    \n",
+    "\n",
     "\n",
     "    // Step 1.b: Interpolate data from data file to set BSSN gridfunctions\n",
     "    ID_BSSN__ALL_BUT_LAMBDAs(params,xx,TOV_in, in_gfs);\n",
@@ -1203,7 +1203,7 @@
     "    ID_BSSN_lambdas(params, xx, in_gfs);\n",
     "    apply_bcs_curvilinear(params, bcstruct, NUM_EVOL_GFS, evol_gf_parity, in_gfs);\n",
     "    enforce_detgammabar_constraint(rfmstruct, params,                   in_gfs);\n",
-    "    \n",
+    "\n",
     "    ID_TOV_TUPMUNU_xx0xx1xx2(params,xx,TOV_in,auxevol_gfs);\n",
     "\n",
     "    free(rbar_arr);\n",
@@ -1215,7 +1215,7 @@
     "}\n",
     "\n",
     "// Step P11: Declare function for evaluating Hamiltonian constraint (diagnostic)\n",
-    "#include \"Hamiltonian_constraint.h\"    \n",
+    "#include \"Hamiltonian_constraint.h\"\n",
     "\n",
     "// Step P12: Declare rhs_eval function, which evaluates BSSN RHSs\n",
     "#include \"rhs_eval.h\"\n",
@@ -1239,7 +1239,7 @@
     "int main(int argc, const char *argv[]) {\n",
     "    paramstruct params;\n",
     "#include \"set_Cparameters_default.h\"\n",
-    "    \n",
+    "\n",
     "    // Step 0a: Read command-line input, error out if nonconformant\n",
     "    if((argc != 4 && argc != 5) || atoi(argv[1]) < NGHOSTS || atoi(argv[2]) < NGHOSTS || atoi(argv[3]) < 2 /* FIXME; allow for axisymmetric sims */) {\n",
     "        fprintf(stderr,\"Error: Expected three command-line arguments: ./BrillLindquist_Playground Nx0 Nx1 Nx2,\\n\");\n",
@@ -1285,7 +1285,7 @@
     "        // Step 0e.i: Free allocated space for xx[][] array\n",
     "        for(int i=0;i<3;i++) free(xx[i]);\n",
     "    }\n",
-    "    \n",
+    "\n",
     "    // Step 0f: Call set_Nxx_dxx_invdx_params__and__xx(), which sets\n",
     "    //          params Nxx,Nxx_plus_2NGHOSTS,dxx,invdx, and xx[] for the\n",
     "    //          chosen (non-Eigen) CoordSystem.\n",
@@ -1301,7 +1301,7 @@
     "    const REAL t_final =  1.8*TOV_Mass; /* Final time is set so that at t=t_final, \n",
     "                                         * data at the origin have not been corrupted \n",
     "                                         * by the approximate outer boundary condition */\n",
-    "    \n",
+    "\n",
     "    // Step 0i: Set timestep based on smallest proper distance between gridpoints and CFL factor \n",
     "    REAL dt = find_timestep(&params, xx);\n",
     "    //fprintf(stderr,\"# Timestep set to = %e\\n\",(double)dt);\n",
@@ -1319,11 +1319,11 @@
     "        fprintf(stderr,\"       or allocate (malloc) by hand storage for *diagnostic_output_gfs. \\n\");\n",
     "        exit(1);\n",
     "    }\n",
-    "    \n",
+    "\n",
     "    // Step 0k: Allocate memory for gridfunctions\n",
     "#include \"MoLtimestepping/RK_Allocate_Memory.h\"\n",
     "    REAL *restrict auxevol_gfs = (REAL *)malloc(sizeof(REAL) * NUM_AUXEVOL_GFS * Nxx_plus_2NGHOSTS_tot);\n",
-    "    \n",
+    "\n",
     "    // Step 0l: Set up precomputed reference metric arrays\n",
     "    // Step 0l.i: Allocate space for precomputed reference metric arrays.\n",
     "#include \"rfm_files/rfm_struct__malloc.h\"\n",
@@ -1353,7 +1353,7 @@
     "    time_t start_timer,end_timer;\n",
     "    time(&start_timer); // Resolution of one second...\n",
     "#endif\n",
-    "    \n",
+    "\n",
     "    // Step 3: Integrate the initial data forward in time using the chosen RK-like Method of \n",
     "    //         Lines timestepping algorithm, and output periodic simulation diagnostics \n",
     "    for(int n=0;n<=N_final;n++) { // Main loop to progress forward in time.\n",
@@ -1439,7 +1439,7 @@
     "        } // End progress indicator if(n % 10 == 0)\n",
     "    } // End main loop to progress forward in time.\n",
     "    fprintf(stderr,\"\\n\"); // Clear the final line of output from progress indicator.\n",
-    "    \n",
+    "\n",
     "    // Step 4: Free all allocated memory\n",
     "#include \"rfm_files/rfm_struct__freemem.h\"\n",
     "#include \"boundary_conditions/bcstruct_freemem.h\"\n",
@@ -1464,16 +1464,16 @@
       "\n",
       "Compiling executable...\n",
       "(EXEC): Executing `gcc -Ofast -fopenmp -march=native -funroll-loops BSSN_Hydro_without_Hydro_Ccodes/Hydro_without_Hydro_Playground.c -o Hydro_without_Hydro_Playground -lm`...\n",
-      "(BENCH): Finished executing in 4.0186684131622314 seconds.\n",
+      "(BENCH): Finished executing in 3.8219377994537354 seconds.\n",
       "Finished compilation.\n",
-      "(BENCH) Finished in 4.030927896499634 seconds.\n",
+      "(BENCH) Finished in 3.835279941558838 seconds.\n",
       "\n",
       "Now running, should take ~10 seconds...\n",
       "\n",
       "(EXEC): Executing `taskset -c 0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15 ./Hydro_without_Hydro_Playground 96 16 2 0.5`...\n",
-      "\u001b[2KIt: 300 t/M=1.77 dt/M=5.90e-03 | 98.4%; ETA 0 s | t/M/h 7315.50 | gp/s 4.24e+06\n",
-      "(BENCH): Finished executing in 1.0138978958129883 seconds.\n",
-      "(BENCH) Finished in 1.0262904167175293 seconds.\n",
+      "\u001b[2KIt: 300 t/M=1.77 dt/M=5.90e-03 | 98.4%; ETA 0 s | t/M/h 7232.27 | gp/s 4.19e+06\n",
+      "(BENCH): Finished executing in 1.0140223503112793 seconds.\n",
+      "(BENCH) Finished in 1.0256810188293457 seconds.\n",
       "\n"
      ]
     }
@@ -1783,9 +1783,9 @@
       "Now running, should take ~10 seconds...\n",
       "\n",
       "(EXEC): Executing `taskset -c 0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15 ./Hydro_without_Hydro_Playground 48 8 2 0.5`...\n",
-      "\u001b[2KIt: 70 t/M=1.65 dt/M=2.36e-02 | 92.1%; ETA 0 s | t/M/h 84763.75 | gp/s 3.07e+06\n",
-      "(BENCH): Finished executing in 0.21504878997802734 seconds.\n",
-      "(BENCH) Finished in 0.23000335693359375 seconds.\n"
+      "\u001b[2KIt: 70 t/M=1.65 dt/M=2.36e-02 | 92.1%; ETA 0 s | t/M/h 87346.42 | gp/s 3.16e+06\n",
+      "(BENCH): Finished executing in 0.21460604667663574 seconds.\n",
+      "(BENCH) Finished in 0.22718143463134766 seconds.\n"
      ]
     }
    ],
