Remove trailing whitespace from all Jupyter notebook code cells. Uses algorithm from here: https://github.com/jupyter/notebook/issues/1455#issuecomment-519891159

--- a/Tutorial-TOV-Piecewise_Polytrope_EOSs.ipynb
+++ b/Tutorial-TOV-Piecewise_Polytrope_EOSs.ipynb
@@ -427,7 +427,7 @@
     "#                  eps_integ_const_tab   - uninitialized, see output variable below\n",
     "#\n",
     "# Outputs      : eos.eps_integ_const_tab - value of C used to compute eps_cold within each EOS,\n",
-    "#                                          determined by imposing that eps_cold be everywhere \n",
+    "#                                          determined by imposing that eps_cold be everywhere\n",
     "#                                          continuous\n",
     "\n",
     "def impose_continuity_on_eps_cold(eos):\n",
@@ -754,7 +754,7 @@
     "    for j in range(3,neos-1):\n",
     "        P_poly_tab[j]   = K_poly_tab[j] * rho_poly_tab[j]**(Gamma_poly_tab[j])\n",
     "        K_poly_tab[j+1] = K_poly_tab[j] * rho_poly_tab[j]**(Gamma_poly_tab[j] - Gamma_poly_tab[j+1])\n",
-    "     \n",
+    "\n",
     "    # We impose a \"ratio preserving rescaling\" of rhob:\n",
     "    #\n",
     "    # rhob_rescaled[j] / rhob[j] = rhob_rescaled[j-1] / rhob[j-1]\n",
@@ -1246,7 +1246,7 @@
     "#.-------------------------------.\n",
     "#|  EOS Type: Single Polytrope   |\n",
     "#.-------------------------------.\n",
-    "#| Required inputs:              |      \n",
+    "#| Required inputs:              |\n",
     "#|   - K_single_polytrope        |\n",
     "#|   - Gamma_single_polytrope    |\n",
     "#|   - tau_atmosphere            |\n",
@@ -1325,7 +1325,7 @@
     "#\n",
     "#^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
     "\"\"\"%(tau_atmosphere,          # sets IllinoisGRMHD::tau_atm\n",
-    "     rho_atmosphere,          # sets IllinoisGRMHD::rho_b_atm \n",
+    "     rho_atmosphere,          # sets IllinoisGRMHD::rho_b_atm\n",
     "     rho_atmosphere,          # sets NRPyPlusTOVID::rho_atmosphere\n",
     "     K_single_polytrope,      # sets IllinoisGRMHD::K_ppoly_tab0\n",
     "     K_single_polytrope,      # sets NRPyPlusTOVID::K_atmosphere\n",
@@ -1357,7 +1357,7 @@
     "#.---------------------------------------.\n",
     "#| EOS Type: Generic Piecewise Polytrope |\n",
     "#.---------------------------------------.\n",
-    "#| Required parameters:                  |      \n",
+    "#| Required parameters:                  |\n",
     "#|  - EOS_struct                         |\n",
     "#|  - Gamma_thermal                      |\n",
     "#|  - tau_atmosphere                     |\n",
@@ -1486,7 +1486,7 @@
     "#.---------------------------------------.\n",
     "#|           EOS name: \"\"\"+EOSname+\"\"\"            |\n",
     "#.---------------------------------------.\n",
-    "#|  Reference: Table II and III in       | \n",
+    "#|  Reference: Table II and III in       |\n",
     "#|    Read et al. PRD 79,124032 (2009)   |\n",
     "#|  https://arxiv.org/pdf/0812.2163.pdf  |\n",
     "#.---------------------------------------.\n",
@@ -1499,7 +1499,7 @@
     "#| following NRPy+ tutorial module:      |\n",
     "#| Tutorial-TOV-Piecewise_Polytrope_EOSs |\n",
     "#.---------------------------------------.\n",
-    "#| Required inputs:                      |      \n",
+    "#| Required inputs:                      |\n",
     "#|  - EOS name                           |\n",
     "#|  - Gamma_thermal                      |\n",
     "#.---------------------------------------.\n",
@@ -1876,42 +1876,6 @@
       " import sys                          # This module is used for system related function calls\n",
       " from collections import namedtuple  # This module is used to create named tuples\n",
       " \n",
-      "@@ -114,7 +114,7 @@\n",
-      " #                  eps_integ_const_tab   - uninitialized, see output variable below\n",
-      " #\n",
-      " # Outputs      : eos.eps_integ_const_tab - value of C used to compute eps_cold within each EOS,\n",
-      "-#                                          determined by imposing that eps_cold be everywhere\n",
-      "+#                                          determined by imposing that eps_cold be everywhere \n",
-      " #                                          continuous\n",
-      " \n",
-      " def impose_continuity_on_eps_cold(eos):\n",
-      "@@ -309,7 +309,7 @@\n",
-      "     for j in range(3,neos-1):\n",
-      "         P_poly_tab[j]   = K_poly_tab[j] * rho_poly_tab[j]**(Gamma_poly_tab[j])\n",
-      "         K_poly_tab[j+1] = K_poly_tab[j] * rho_poly_tab[j]**(Gamma_poly_tab[j] - Gamma_poly_tab[j+1])\n",
-      "-\n",
-      "+     \n",
-      "     # We impose a \"ratio preserving rescaling\" of rhob:\n",
-      "     #\n",
-      "     # rhob_rescaled[j] / rhob[j] = rhob_rescaled[j-1] / rhob[j-1]\n",
-      "@@ -589,7 +589,7 @@\n",
-      " #.-------------------------------.\n",
-      " #|  EOS Type: Single Polytrope   |\n",
-      " #.-------------------------------.\n",
-      "-#| Required inputs:              |\n",
-      "+#| Required inputs:              |      \n",
-      " #|   - K_single_polytrope        |\n",
-      " #|   - Gamma_single_polytrope    |\n",
-      " #|   - tau_atmosphere            |\n",
-      "@@ -668,7 +668,7 @@\n",
-      " #\n",
-      " #^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      " \"\"\"%(tau_atmosphere,          # sets IllinoisGRMHD::tau_atm\n",
-      "-     rho_atmosphere,          # sets IllinoisGRMHD::rho_b_atm\n",
-      "+     rho_atmosphere,          # sets IllinoisGRMHD::rho_b_atm \n",
-      "      rho_atmosphere,          # sets NRPyPlusTOVID::rho_atmosphere\n",
-      "      K_single_polytrope,      # sets IllinoisGRMHD::K_ppoly_tab0\n",
-      "      K_single_polytrope,      # sets NRPyPlusTOVID::K_atmosphere\n",
       "@@ -680,12 +680,12 @@\n",
       "      Gamma_single_polytrope)) # sets EOS_omni::hybrid_gamma_th\n",
       " \n",
@@ -1927,39 +1891,12 @@
       "             print(\"Error: Please set Gamma_thermal. Usage:\")\n",
       "             print(\"generate_IllinoisGRMHD_EOS_parameter_file(\\\"piecewise\\\",outfilename,Gamma_thermal=Gamma_th,EOS_struct=eos_named_tuple)\")\n",
       "             sys.exit(1)\n",
-      "@@ -700,7 +700,7 @@\n",
-      " #.---------------------------------------.\n",
-      " #| EOS Type: Generic Piecewise Polytrope |\n",
-      " #.---------------------------------------.\n",
-      "-#| Required parameters:                  |\n",
-      "+#| Required parameters:                  |      \n",
-      " #|  - EOS_struct                         |\n",
-      " #|  - Gamma_thermal                      |\n",
-      " #|  - tau_atmosphere                     |\n",
-      "@@ -829,7 +829,7 @@\n",
-      " #.---------------------------------------.\n",
-      " #|           EOS name: \"\"\"+EOSname+\"\"\"            |\n",
-      " #.---------------------------------------.\n",
-      "-#|  Reference: Table II and III in       |\n",
-      "+#|  Reference: Table II and III in       | \n",
-      " #|    Read et al. PRD 79,124032 (2009)   |\n",
-      " #|  https://arxiv.org/pdf/0812.2163.pdf  |\n",
-      " #.---------------------------------------.\n",
-      "@@ -842,7 +842,7 @@\n",
-      " #| following NRPy+ tutorial module:      |\n",
-      " #| Tutorial-TOV-Piecewise_Polytrope_EOSs |\n",
-      " #.---------------------------------------.\n",
-      "-#| Required inputs:                      |\n",
-      "+#| Required inputs:                      |      \n",
-      " #|  - EOS name                           |\n",
-      " #|  - Gamma_thermal                      |\n",
-      " #.---------------------------------------.\n",
       "@@ -935,3 +935,4 @@\n",
       " #.--------------------------------.\n",
       " #\n",
       " #^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\"\"\" %(Gamma_thermal))\n",
       "+\n",
-      "<generator object unified_diff at 0x7f68e62599e0>\n"
+      "<generator object unified_diff at 0x7f5c0db25040>\n"
      ]
     }
    ],
@@ -2241,7 +2178,7 @@
     "#\n",
     "# Set basic physical constants\n",
     "def convert_M_to_solar_masses_and_R_to_km(M,R):\n",
-    "    Msun = 1.98900e+33 # g                    # Mass of the sun                 \n",
+    "    Msun = 1.98900e+33 # g                    # Mass of the sun\n",
     "    c    = 2.99792e+10 # cm s^(-1)            # Speed of light\n",
     "    G    = 6.67408e-08 # cm^(3) g^(-1) s^(-2) # Gravitational constant\n",
     "\n",
@@ -2451,7 +2388,7 @@
       "MS1 : DONE after 19 iterations!\n",
       "MS1b: DONE after 19 iterations!\n",
       "MPA1: DONE after 22 iterations!\n",
-      "(BENCH) Finished generating plot data. Time elapsed: 40.32 seconds.\n"
+      "(BENCH) Finished generating plot data. Time elapsed: 39.67 seconds.\n"
      ]
     }
    ],
