--- a/Tutorial-u0_smallb_Poynting-Cartesian.ipynb
+++ b/Tutorial-u0_smallb_Poynting-Cartesian.ipynb
@@ -113,8 +113,7 @@
     "import sympy as sp                         # SymPy: The Python computer algebra package upon which NRPy+ depends\n",
     "import NRPy_param_funcs as par             # NRPy+: Parameter interface\n",
     "import indexedexp as ixp                   # NRPy+: Symbolic indexed expression (e.g., tensors, vectors, etc.) support\n",
-    "import reference_metric as rfm             # NRPy+: Reference metric support\n",
-    "from outputC import *                      # NRPy+: Basic C code output functionality\n",
+    "from outputC import outputC                # NRPy+: Basic C code output functionality\n",
     "import BSSN.ADMBSSN_tofrom_4metric as AB4m # NRPy+: ADM/BSSN <-> 4-metric conversions\n",
     "\n",
     "# Set spatial dimension = 3\n",
@@ -122,7 +121,7 @@
     "\n",
     "thismodule = \"smallbPoynET\"\n",
     "\n",
-    "# Step 1.a: Compute the 4-metric $g_{\\mu\\nu}$ and its inverse \n",
+    "# Step 1.a: Compute the 4-metric $g_{\\mu\\nu}$ and its inverse\n",
     "#           $g^{\\mu\\nu}$ from the ADM 3+1 variables, using the\n",
     "#           BSSN.ADMBSSN_tofrom_4metric NRPy+ module\n",
     "import BSSN.ADMBSSN_tofrom_4metric as AB4m\n",
@@ -467,13 +466,13 @@
     "    print(\"PASSED: u0 C code matches!\")\n",
     "\n",
     "for i in range(4):\n",
-    "    print(\"u0etc.smallb4U[\"+str(i)+\"] - smallb4U[\"+str(i)+\"] = \" \n",
+    "    print(\"u0etc.smallb4U[\"+str(i)+\"] - smallb4U[\"+str(i)+\"] = \"\n",
     "              + str(u0etc.smallb4U[i]-smallb4U[i]))\n",
     "\n",
     "print(\"u0etc.smallb2etk - smallb2etk = \" + str(u0etc.smallb2etk-smallb2etk))\n",
     "\n",
     "for i in range(DIM):\n",
-    "    print(\"u0etc.PoynSU[\"+str(i)+\"] - PoynSU[\"+str(i)+\"] = \" \n",
+    "    print(\"u0etc.PoynSU[\"+str(i)+\"] - PoynSU[\"+str(i)+\"] = \"\n",
     "              + str(u0etc.PoynSU[i]-PoynSU[i]))"
    ]
   },
