--- a/Tutorial-Start_to_Finish-FishboneMoncriefID_standalone.ipynb
+++ b/Tutorial-Start_to_Finish-FishboneMoncriefID_standalone.ipynb
@@ -148,7 +148,7 @@
     "               Gamma_times_ValenciavU2, // util1(2) in FMtorus.f90.\n",
     "               uKS4U1,uKS4U2,uKS4U3,\n",
     "               uBL4U1,uBL4U2,uBL4U3);\n",
-    "    }   \n",
+    "    }\n",
     "    return 0;\n",
     "}"
    ]
@@ -180,17 +180,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2020-05-31 20:32:18--  http://astro.phys.wvu.edu/zetienne/torus_cuts.csv\n",
-      "Resolving astro.phys.wvu.edu (astro.phys.wvu.edu)... 157.182.3.45\n",
-      "Connecting to astro.phys.wvu.edu (astro.phys.wvu.edu)|157.182.3.45|:80... connected.\n",
-      "HTTP request sent, awaiting response... 200 OK\n",
-      "Length: 16445 (16K) [text/csv]\n",
-      "Saving to: ‘torus_cuts.csv’\n",
-      "\n",
-      "torus_cuts.csv      100%[===================>]  16.06K  --.-KB/s    in 0.01s   \n",
-      "\n",
-      "2020-05-31 20:32:18 (1.34 MB/s) - ‘torus_cuts.csv’ saved [16445/16445]\n",
-      "\n"
+      "--2020-05-31 22:30:39--  http://astro.phys.wvu.edu/zetienne/torus_cuts.csv\r\n",
+      "Resolving astro.phys.wvu.edu (astro.phys.wvu.edu)... 157.182.3.45\r\n",
+      "Connecting to astro.phys.wvu.edu (astro.phys.wvu.edu)|157.182.3.45|:80... connected.\r\n",
+      "HTTP request sent, awaiting response... 200 OK\r\n",
+      "Length: 16445 (16K) [text/csv]\r\n",
+      "Saving to: ‘torus_cuts.csv’\r\n",
+      "\r\n",
+      "torus_cuts.csv      100%[===================>]  16.06K  --.-KB/s    in 0.01s   \r\n",
+      "\r\n",
+      "2020-05-31 22:30:39 (1.45 MB/s) - ‘torus_cuts.csv’ saved [16445/16445]\r\n",
+      "\r\n"
      ]
     },
     {
@@ -285,7 +285,7 @@
     "ylabels = ['Lorentz Gamma_{KS}=G','G*v^r_{KS,Val.}','G*v^{\\\\theta}_{KS,Val.}','G*v^{\\phi}_{KS,Val.}']\n",
     "\n",
     "for i in range(len(ylabels)):\n",
-    "    # https://matplotlib.org/gallery/text_labels_and_annotations/legend.html#sphx-glr-gallery-text-labels-and-annotations-legend-py        \n",
+    "    # https://matplotlib.org/gallery/text_labels_and_annotations/legend.html#sphx-glr-gallery-text-labels-and-annotations-legend-py\n",
     "    fig, ax = plt.subplots()\n",
     "    plt.title(\"NRPy's FM solve with FMtorus.f90: \"+ylabels[i])\n",
     "    plt.xlabel(\"r/M\")\n",
